# VSSS-EMC

./: .gitignore  .gitmodules  .travis.yml  CAM_CASA  CAM_LARC.txt  CAM_quicksave.txt  CAM_quicksave.txt~  CMakeLists.txt  Cam_calib.txt  ComoUsarGitLab.md  HSV_CASA  HSV_CASA_AZUL.txt  HSV_LARC.txt  HSV_calib.txt  HSV_quicksave.txt  HSV_quicksave.txt~  HSV_quicksave2.txt~  INFO_LARC.txt  INFO_quicksave.txt  INFO_quicksave.txt~  LICENSE  Makefile  PID_config.txt  README.md  TUTORIAL  VSS.sh  VSS.sh~  VSS_GIT.sh  VSS_GIT.sh~  WARP_CASA_AZUL  WARP_LARC  WARP_LARC.txt  WARP_mercado  WARP_quicksave.txt  WARP_quicksave.txt~  autoGMM.json  autosave.txt  blue_headless.json  both_headless.json  buildVSSS.sh  (+29 more)
Flowcharts/: README
Robot_Code/: ROBO2015_V7.ino  ROBO2016_V1.ino
VSSS Simulator/: Assembly-CSharp.csproj  VSS.Editor.csproj  VSS.csproj  VSS.sln  VSS.userprefs
VSSS Simulator/Assets/Materials/: 10.mat  Bola.mat  Bola.physicMaterial  Campo.mat  Floor.physicMaterial  Primaria.mat  Primaria2.mat  Robo.mat  Robot.physicMaterial  Secundaria1.mat  Secundaria2.mat
VSSS Simulator/Assets/Prefabs/: Field.prefab  Robot.prefab
VSSS Simulator/Assets/Prefabs/Arena/: VS_Arena_2017_V3_Casca.fbx
VSSS Simulator/Assets/Prefabs/Robot/: EstruturaVSSS2017.mtl
VSSS Simulator/Assets/Scenes/: Main.unity
VSSS Simulator/Assets/Scenes/Main/: NavMesh.asset
VSSS Simulator/Assets/Scripts/: AG.cs  ANN.cs  Game_UI.cs  Goal.cs  NEAT.cs  Robot.cs  Robot_Test.cs  VSS.cs
VSSS Simulator/Assets/src/editor/: PythonMenu.cs
VSSS Simulator/Assets/src/python/: CubeClass.py
VSSS Simulator/ProjectSettings/: NavMeshAreas.asset  TagManager.asset
backup/: CAM_quicksave.txt  HSV_quicksave.txt  INFO_quicksave.txt  WARP_quicksave.txt  warp_config.txt
backup/06-09-2016/: VSS.sh
backup/06-09-2016/gustavo_libs/: .cproject  .project  CamCal.sh  HSV_calib.txt  warp_config.txt
backup/06-09-2016/gustavo_libs/cc/: .project  CamCal  HSV_calib.txt  camcap.hpp  controlGUI.hpp  warp_config.txt
backup/06-09-2016/gustavo_libs/pack-capture/: .cproject  .project
backup/06-09-2016/gustavo_libs/pack-img/: .project
backup/06-09-2016/gustavo_libs/pack-mat/: .project
backup/06-09-2016/gustavo_libs/pack-util/: .cproject  .project
cc/: .cproject  Ann.cpp  Ann.hpp  CPUTimer.cpp  CPUTimer.h  CamCal  CamCal.sh~  CamCap.cpp  CamCap.hpp  Constants.hpp  Esp32Serial.cpp  Esp32Serial.hpp  GUI.cpp  GUI.hpp  GameGUI.cpp  GameGUI.hpp  Goalkeeper.cpp  Goalkeeper.hpp  HSV_calib.txt  JoystickStrategy.cpp  JoystickStrategy.hpp  KalmanFilter.cpp  KalmanFilter.hpp  Kalman_Filter.hpp  LS.cpp  LS.h  MainLoop.cpp  MainLoop.hpp  Messenger.cpp  Messenger.h  Parameters.hpp  Planner.cpp  Planner.hpp  Robot.hpp  SerialW.cpp  SerialW.hpp  Simulation.cpp  Simulation.hpp  SimulationGUI.cpp  SimulationGUI.hpp  (+29 more)
cc/Debug/: makefile
cc/Fuzzy/: FuzzyController.cpp  FuzzyController.cpp~  FuzzyController.hpp  FuzzyFunction.cpp  FuzzyFunction.hpp  Membership_VSS2017.txt  Membership_VSS2017.txt~  RULES.txt  RULES_VSS2017.txt  Rules.cpp  Rules.hpp  Troca_Memberships.txt  Troca_Memberships.txt~
cc/GUI/: XbeeSelectGUI.cpp  XbeeSelectGUI.hpp
cc/Geometry/: Geometry.cpp  Geometry.h
cc/Release/: makefile  subdir.mk
cc/RobotControl/: Control.cpp  Control.h  SimuRobotControl.cpp  SimuRobotControl.h  include.h
cc/Simulator/: SimulatedGame.cpp  SimulatedGame.hpp  Simulator.cpp  Simulator.hpp  SimulatorClient.cpp  SimulatorClient.hpp  Wheel.hpp
cc/Strategy2/: AIStrategy.cpp  AIStrategy.hpp  Attacker.cpp  Attacker.h  Ball.hpp  Defender.cpp  Defender.hpp  Field.cpp  Field.h  Goalkeeper.cpp  Goalkeeper.hpp  LS.cpp  LS.h  Robot2.cpp  Robot2.h  Strategy2.cpp  Strategy2.h  Strategy2.hpp  StrategyWrapper.cpp  StrategyWrapper.hpp  Team.h
cc/Strategy3/: Adversary.hpp  AttackerStrategy.cpp  AttackerStrategy.hpp  Ball.hpp  DefenderStrategy.cpp  DefenderStrategy.hpp  Game.cpp  Game.hpp  GoalkeeperStrategy.cpp  GoalkeeperStrategy.hpp  NoStrategy.hpp  Robot3.cpp  Robot3.hpp  Robots.hpp  RoleStrategy.hpp  Strategy.hpp  Strategy3.cpp  Strategy3.hpp  Team.cpp  Team.hpp  Types.cpp  Types.hpp  helper.cpp  helper.hpp
cc/vision/: RecognizedTag.hpp  Tag.cpp  Tag.hpp  Tags.hpp  gmm.cpp  gmm.hpp  tag.cpp  tag.hpp  vision.cpp  vision.hpp  visionGUI.cpp  visionGUI.hpp  visionROI.cpp  visionROI.hpp
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
pack-capture-gui/: .cproject  .project
pack-capture-gui/Debug/: sources.mk
pack-capture-gui/Debug/capture-gui/: V4LInterface-events.d
pack-capture-gui/Release/capture-gui/: V4LInterface-aux.d
pack-capture-gui/capture-gui/: ImageArt.cpp  ImageArt.hpp  ImageView.cpp  ImageView.hpp  ImageWarp.cpp  ImageWarp.hpp  ImageWarper.cpp  ImageWarper.hpp  Robot.hpp  RobotGUI.cpp  RobotGUI.hpp  SerialW.hpp  V4LInterface-aux.cpp  V4LInterface-events.cpp  V4LInterface.hpp  controlGUI.hpp  strategyGUI.hpp
pack-capture/Debug/: makefile
pack-capture/Release/: sources.mk
pack-capture/Release/capture/: subdir.mk  v4lcap.d
pack-capture/capture/: v4lcap.cpp  v4lcap.hpp  v4ldev.hpp
pack-img/: .cproject
pack-mat/: .cproject
pack-mat/Debug/mat/: subdir.mk  test.d
pack-mat/Release/mat/: subdir.mk
pack-mat/mat/: Matrix.hpp  MatrixBase.hpp  Range.hpp
pack-mat/mat/functions/: argmin.hpp  chol.hpp  diag.hpp  inv.hpp  mean.hpp  min.hpp  ones.hpp  qrsolver.hpp  reshape.hpp  svd.hpp  veclength.hpp
pack-mat/mat/impl/: basic_operations.hpp
pack-mat/mat/impl/array/: arrayops.hpp
pack-mat/mat/impl/geom/: predicates.hpp
pack-mat/mat/internal/: MatRef.hpp  config.hpp  debug.h
pack-mat/mat/msg/: common_msg.hpp
pack-mat/mat/operations/: mult.hpp
pack-mat/math/: quadratic.hpp  rng.cpp  rng.hpp
pack-util/util/impl/: msg.c  msg.h
protobuf_msg/: README.md  packet.proto  vssref_command.proto  vssref_common.proto  vssref_placement.proto
python/: README.md  ai.py  fast_simulation.py  fast_simulation_multithread.py  run_simulations.py
python/MultiAgent/: __init__.py  my_ppo2.py  my_runner.py
vsss_msgs_ws/src/vsss_msgs/: CMakeLists.txt  package.xml
vsss_msgs_ws/src/vsss_msgs/msg/: Control.msg
(+124 files in other folders)
