<package format="2">
  <name>vsss_msgs</name>
  <version>1.0.0</version>
  <description>Mensagens utilizadas no simulador do VSSS</description>
  <maintainer email="thiago-henrique@outlook.com">Thiago Henrique</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
